Add docker stuff and move log to /data

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node-dev src"
+    "start": "ts-node-dev src",
+    "prod": "ts-node src",
+    "deploy": "git pull && docker-compose up -d --build"
   },
   "repository": {
     "type": "git",
